# SigmaToSecuronix

./: .gitignore  README.md  pyproject.toml
config/: mapping.yml
omega/cli/: convert.py
sigma_rules/: process_creation.yml  proxy.yml  web_server.yml  win_securoty.yml
tests/: test_omega.py
