[tool.poetry]
name = "securonix-cli"
version = "0.1.4"
description = "A simple tool for converting Sigma detection rules to Securonix Spotter queries."
authors = ["Securonix Threat Labs"]
repository = "https://github.com/Securonix/SigmaToSecuronix"

packages = [
    { include = "omega" }
]


[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pysigma = "^0.9"
sigmatools = "^0.22.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
securonix-cli = "omega.cli.main:main"

